--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.6",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "useragent": "^2.3.0"
   }
 }
